Bug 69469 - [sna] Minor corruption in Gnome Disk Usage Analyzer (baobab)
Summary: [sna] Minor corruption in Gnome Disk Usage Analyzer (baobab)
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-17 13:56 UTC by Pavel Ondračka
Modified: 2013-10-01 10:00 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screenshot (28.58 KB, image/png)
2013-09-17 13:56 UTC, Pavel Ondračka
no flags Details

Description Pavel Ondračka 2013-09-17 13:56:24 UTC
Created attachment 85987 [details]
screenshot

When you move mouse over the rounded graph in Gnome Disk Usage Analyzer, there occasionally appears black thin vertical lines. This doesn't happen with UXA. Screenshot atached.

GPU: gm45
xf86-video-intel: 825557ce44b16b59438df31fd6df2ed82462be89
Kernel: 3.10.11-100.fc18.x86_64
Libdrm: 2.4.45-1.fc18
Comment 1 Chris Wilson 2013-09-30 19:23:29 UTC
As anticipated it is a seam introduced by the Imprecise trapezoidation. Not sure yet if it is fixable.
Comment 2 Chris Wilson 2013-09-30 22:57:13 UTC
Hmm, actually the corruption is always on the very left of the rendered area - so an artifact of the trapezoid clipping.
Comment 3 Chris Wilson 2013-10-01 10:00:23 UTC
My apologies for assuming that this was just an Imprecise trapezoid artifact and not giving it the attention it deserved.

commit c724098f2215ff4f4193bbae3d8e42889701edf0
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Sep 30 23:34:02 2013 +0100

    sna/trapezoids: Fix clipping on the far left
    
    Edges that extend past the left hand side of the clip box cannot simply
    be ignored (since they contribute to the scanline to their right, our
    region of interest) but they need to calculated separately rather than
    merged into the first cell.
    
    Reported-by: Pavel Ondračka <pavel.ondracka@email.cz>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=69469
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.